# coc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_cn.md  compile_commands.json  xmake.lua
.cache/clangd/index/: main.cpp.19827F09F4EC5F7B.idx  main.cpp.3EA1350B84A6484B.idx
VS2022/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  coc.sln  coc.vcxproj  coc.vcxproj.filters
VS2022-module/: ALL_BUILD.vcxproj  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  coc.sln  coc.vcxproj  coc.vcxproj.filters
include/coc/: action.hpp  actions.hpp  arguments.hpp  coc.hpp  def.hpp  error_list.hpp  getter.hpp  help_func.hpp  ihelp_func.hpp  option.hpp  options.hpp  parser.hpp  parser_config.hpp  parser_log.hpp  print_component.hpp  targets.hpp  values.hpp
module/coc/: coc.ixx
src/: action.cpp  actions.cpp  arguments.cpp  coc.cc  coc.cpp  coc.hpp  coc.ixx  cxc.ixx  error_list.cpp  example.cc  getter.cpp  help_func.cpp  main.cpp  options.cpp  parser.cpp  parser_log.cpp  print_component.cpp  simple.cc  targets.cpp  values.cpp
