cmake_minimum_required(VERSION 3.25)
project(coc)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_BUILD_TYPE Release)
add_library(coc STATIC)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
if(DEFINED MODULE_BUILD)
    target_sources(coc PRIVATE module/coc/coc.ixx src/coc.cc)
else ()
    target_include_directories(coc PRIVATE include)
    target_sources(coc PRIVATE src/coc.cpp)
endif ()