cmake_minimum_required(VERSION 3.25)
project(coc)
set(CMAKE_CXX_STANDARD 20)

add_library(coc STATIC)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
add_executable(example)
target_link_libraries(example PRIVATE coc)
if(DEFINED MODULE_BUILD)
    target_sources(coc PUBLIC module/coc/coc.ixx PRIVATE src/coc.cc)
else ()
    target_include_directories(coc PUBLIC include)
    target_sources(coc PRIVATE src/coc.cpp)
endif ()

target_sources(example PRIVATE src/example.cc)